Fix flickering issue

--- a/client/html5tooltips-hover-issue.css
+++ b/client/html5tooltips-hover-issue.css
@@ -3,6 +3,7 @@
   width: 100px;
   height: 100px;
   position: relative;
+  margin: 10px 20px
 }
 
 .outer .inner {
